--- a/src/less/chatbubbles.less
+++ b/src/less/chatbubbles.less
@@ -70,5 +70,18 @@
     img{
       width: 100%;
     }
+    .avatar{
+      border-radius: 100px;
+      width: 40px;
+      background-color: #666;
+      &.l{
+        float: left;
+        transform: translateX(-100%);
+      }
+      &.r{
+        float: right;
+        transform: translateX(100%);
+      }
+    }
   }
 }
